fix multiple error

--- a/roles/nova_controller/templates/nova.conf.j2
+++ b/roles/nova_controller/templates/nova.conf.j2
@@ -1,30 +1,39 @@
-[barbican]
-[cache]
-[cells]
-[cinder]
-[compute]
-[conductor]
-[console]
-[consoleauth]
-[cors]
-[crypto]
+[DEFAULT]
+enabled_apis = osapi_compute,metadata
+transport_url = rabbit://openstack:{{ rabbitmq_pw }}@{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
+my_ip = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
+use_neutron = True
+firewall_driver = nova.virt.firewall.NoopFirewallDriver
 
-[database]
-connection = mysql+pymysql://nova:{{ nova_dbpw }}@{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}/nova
-
-[devices]
-[ephemeral_storage_encryption]
-[filter_scheduler]
+[vnc]
+enabled = True
+server_listen = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
+server_proxyclient_address = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
 
 [glance]
 api_servers = http://{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}:9292
 
-[guestfs]
-[healthcheck]
-[hyperv]
-[ironic]
-[key_manager]
-[keystone]
+[oslo_concurrency]
+lock_path = /var/lib/nova/tmp
+
+[placement]
+os_region_name = RegionOne
+project_domain_name = Default
+project_name = service
+auth_type = password
+user_domain_name = Default
+auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}:5000/v3
+username = placement
+password = {{ placement_pw }}
+
+[api_database]
+connection = mysql+pymysql://nova:{{ nova_dbpw }}@{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}/nova_api
+
+[database]
+connection = mysql+pymysql://nova:{{ nova_dbpw }}@{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}/nova
+
+[api]
+auth_strategy = keystone
 
 [keystone_authtoken]
 auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}:5000/v3
@@ -35,11 +44,6 @@ user_domain_name = Default
 project_name = service
 username = nova
 password = {{ nova_pw }}
-
-[libvirt]
-[matchmaker_redis]
-[metrics]
-[mks]
 
 [neutron]
 region_name = RegionOne
@@ -54,12 +58,31 @@ password = {{ neutron_pw }}
 service_metadata_proxy = true
 metadata_proxy_shared_secret = {{ metadata_secret }}
 
+[barbican]
+[cache]
+[cells]
+[cinder]
+[compute]
+[conductor]
+[console]
+[consoleauth]
+[cors]
+[crypto]
+[devices]
+[ephemeral_storage_encryption]
+[filter_scheduler]
+[guestfs]
+[healthcheck]
+[hyperv]
+[ironic]
+[key_manager]
+[keystone]
+[libvirt]
+[matchmaker_redis]
+[metrics]
+[mks]
 [notifications]
 [osapi_v21]
-
-[oslo_concurrency]
-lock_path = /var/lib/nova/tmp
-
 [oslo_messaging_amqp]
 [oslo_messaging_kafka]
 [oslo_messaging_notifications]
@@ -68,17 +91,6 @@ lock_path = /var/lib/nova/tmp
 [oslo_middleware]
 [oslo_policy]
 [pci]
-
-[placement]
-os_region_name = RegionOne
-project_domain_name = Default
-project_name = service
-auth_type = password
-user_domain_name = Default
-auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}:5000/v3
-username = placement
-password = {{ placement_pw }}
-
 [quota]
 [rdp]
 [remote_debug]
@@ -90,12 +102,6 @@ password = {{ placement_pw }}
 [vault]
 [vendordata_dynamic_auth]
 [vmware]
-
-[vnc]
-enabled = True
-server_listen = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
-server_proxyclient_address = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
-
 [workarounds]
 [wsgi]
 [xenserver]
