--- a/ansible/openstack-install/roles/keystone/templates/admin_rc.j2
+++ b/ansible/openstack-install/roles/keystone/templates/admin_rc.j2
@@ -5,3 +5,4 @@ export OS_USER_DOMAIN_NAME=Default
 export OS_PROJECT_DOMAIN_NAME=Default
 export OS_AUTH_URL=http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000/v3
 export OS_IDENTITY_API_VERSION=3
+export OS_IMAGE_API_VERSION=2
