--- a/ansible/openstack-install/roles/nova_controller/templates/nova.conf.j2
+++ b/ansible/openstack-install/roles/nova_controller/templates/nova.conf.j2
@@ -36,8 +36,7 @@ connection = mysql+pymysql://nova:{{ nova_dbpw }}@{{ hostvars[inventory_hostname
 auth_strategy = keystone
 
 [keystone_authtoken]
-www_authenticate_uri = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000/
-auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000/
+auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000/v3
 memcached_servers = {{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:11211
 auth_type = password
 project_domain_name = Default
@@ -52,8 +51,7 @@ project_domain_name = Default
 project_name = service
 auth_type = password
 user_domain_name = Default
-auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:35357
-url = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:9696
+auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000
 username = neutron
 password = {{ neutron_pw }}
 service_metadata_proxy = true
