--- a/ansible/openstack-install/roles/glance/templates/glance-api.conf.j2
+++ b/ansible/openstack-install/roles/glance/templates/glance-api.conf.j2
@@ -12,7 +12,7 @@ filesystem_store_datadir = /var/lib/glance/images/
 [image_format]
 
 [keystone_authtoken]
-auth_uri = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000
+www_authenticate_uri = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000
 auth_url = http://{{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:5000
 memcached_servers = {{ hostvars[inventory_hostname]['ansible_eth1']['ipv4']['address'] }}:11211
 auth_type = password
