--- a/ansible/openstack-install/roles/keystone/templates/clouds.yaml.j2
+++ b/ansible/openstack-install/roles/keystone/templates/clouds.yaml.j2
@@ -8,3 +8,4 @@ clouds:
       user_domain_name: default
       project_domain_name: default
     identity_api_version: 3
+    region_name: RegionOne
